# agentops_observer

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LINKS.md  Makefile  railway.json  render.yaml  vercel.json
.github/workflows/: ci.yml  keep-alive.yml  security.yml
apps/api/: .env.production.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: cache.py  config.py  csrf.py  database.py  logging.py  rate_limiter.py  security.py  validators.py
apps/api/app/models/: __init__.py  auth.py  costs.py  executions.py  incidents.py
apps/api/app/routes/: __init__.py  agents.py  alerts.py  auth.py  compliance.py  costs.py  executions.py  incidents.py  ingest.py  websocket.py
apps/api/tests/: __init__.py  conftest.py  test_anomaly_detection.py  test_auth.py  test_costs.py  test_executions.py  test_incidents.py
apps/collector/: pyproject.toml
apps/collector/src/collector/: __init__.py  aggregator.py  alerting.py  config.py  consumer.py  database.py  main.py  semantic.py
apps/web/: .env.production.example  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/web/public/: robots.txt  sitemap.xml
apps/web/src/app/: globals.css  layout.tsx  page.tsx  page.tsx.bak
apps/web/src/app/agents/: page.tsx
apps/web/src/app/alerts/: page.tsx
apps/web/src/app/compliance/: page.tsx
apps/web/src/app/costs/: page.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/app/executions/: page.tsx
apps/web/src/app/executions/[id]/: page.tsx
apps/web/src/app/forgot-password/: page.tsx
apps/web/src/app/incidents/: page.tsx
apps/web/src/app/incidents/[id]/: page.tsx
apps/web/src/app/landing/: page.tsx
apps/web/src/app/live-feed/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/performance/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/app/reset-password/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: api-status.tsx  command-palette.tsx  error-boundary.tsx  notifications-dropdown.tsx  providers.tsx
apps/web/src/components/keyboard/: keyboard-provider.tsx
apps/web/src/components/layout/: demo-mode-banner.tsx  footer.tsx  header.tsx  page-title.tsx  sidebar.tsx
apps/web/src/components/tour/: tour-provider.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  circular-progress.tsx  count-up.tsx  empty-state.tsx  ghost-ui.tsx  relative-time.tsx  skeleton.tsx  status-badge.tsx  switch.tsx  toast.tsx  use-toast.tsx
apps/web/src/lib/: api-client.ts  api.ts  auth.tsx  data-layer.ts  demo-mode.tsx  hooks.ts  mock-data.ts  providers.tsx  types.ts  utils.ts  websocket.tsx
infrastructure/docker/: docker-compose.yml  init-db.sql  redpanda-console-config.yaml
scripts/: backup_database.py  backup_instructions.md  demo_script.md  keep_alive.py  seed.py  seed_render.sh
